# face-enhancer

./: CMakeLists.txt  LICENSE  README.md  README_SIMPLE.md  build.bat  build.sh  quick_start.bat  setup.sh  start_project.bat  start_web.bat  start_web_python.bat
cpp/: CMakeLists.txt  build.bat  build.sh  start_server.bat  start_server.sh
cpp/include/: face_enhancement.h  image_enhancer.h  image_utils.h  web_server.h
cpp/src/: face_enhancement.cpp  image_enhancer.cpp  image_utils.cpp  main.cpp  web_server.cpp
cpp/web/: simple_interface.html
src/: enhancement_algorithms.cpp  face_detector.cpp  face_enhancer.cpp  image_processor.cpp  main.cpp  utils.cpp
src/include/: enhancement_algorithms.h  face_detector.h  face_enhancer.h  image_processor.h  utils.h
web/: enhanced_server.py  fast_enhanced_server.py  index.html  performance_launcher.py  python_server.py  script.js  simple.html  simple_interface.html  start_server.bat  styles.css
